k8s/kavita/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      volumes:
        - name: themes
          configMap:
            name: themes
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
      containers:
        - name: kavita
          image: docker.io/jvmilazz0/kavita:0.8.2
          volumeMounts:
            - name: truenas-media
              mountPath: /media
            - name: config-volume
              mountPath: /kavita/config
            - name: themes
              mountPath: /kavita/config/themes
              readOnly: true
          ports:
            - name: web
              containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://kavita.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: kavita
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: kavita
    gethomepage.dev/name: Kavita
spec:
  ingressClassName: nginx
  rules:
    - host: kavita.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
